syntax = "proto3";
package chat.v1;

import "types/v1/types.proto";

message CreateUserRequest {
  types.v1.User user = 1;
}
message CreateUserResponse {
  types.v1.User user = 1;
}

message SendMessageRequest {
  types.v1.Message message = 1;
}
message SendMessageResponse {
  types.v1.Message message = 1;
}

service ChatService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {};
}